--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A service that allows devices to share auth/data between them",
   "main": "index.js",
   "scripts": {
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^3.5.7",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "random-number": "0.0.9"
   }
 }
