--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "env-cmd ./config/dev.env node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,11 @@
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.12",
     "random-number": "0.0.9"
-  },"engines": {
+  },
+  "engines": {
     "node": "12.x"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
